Fixed WhiteSpace issue in product grid
There are some whitespaces in between li tags, that's why product grid showing 3 products instead of 4. Mention in #20140 and #21244

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -34,12 +34,12 @@
 
     .product {
         &-items {
-            font-size: 0;
+            .lib-inline-block-space-container();
             &:extend(.abs-reset-list all);
         }
 
         &-item {
-            font-size: 1.4rem;
+            .lib-inline-block-space-item();
             vertical-align: top;
 
             .products-grid & {
